# Locally-Injective-Parametrization-Weber-Zorin14

./: CMakeLists.txt  ReadMe.txt  runcmake_zohar.bat  settings_local.cmake
Code/: Angle.h  CGAL_Face.h  CMakeLists.txt  EarClipper.cpp  EarClipper.h  GMM_Macros.h  MatlabGMMDataExchange.h  MatlabInterface.cpp  main.cpp  triangle.h  triangulation.cpp  triangulation.h  utils.h  wavefront_obj.cpp
Code/LocallyInjectiveParametrization/: Angle.cpp  CGAL_Halfedge.h  CGAL_Macros.h  CGAL_Mesh.h  CGAL_Vertex.h  MatlabGMMDataExchange.cpp  MatlabInterface.cpp  Shor.cpp  Shor.h  helpFunctions.cpp  helpFunctions.h  main.cpp  stdafx.h  triangle.c
matlabScripts/: Thumbs.db  nis.m  nis2.m  nis3.m  nis4.m  resMap.m  stage2.fig  stage2.m  stage3.fig  stage3.m  stage4.fig  stage4.m  stage4_5.fig  stage4_5.m  stage5.fig  stage5.m  stage6.fig  stage6.m  welcome.fig  welcome.m
